# python-project-83

./: .env  .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  docker-compose.yml  pyproject.toml  render.yaml  ruff.toml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
page_analyzer/: __init__.py  app.py  config.py  db.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
